src/scss/layout/_contact.scss
// contactUs //
#contactUs {
    background: $alabaster;
    padding: 140px 0 140px 0;

    .container {
        background: $crimson;
        padding: 0;
        .contactForm {
            float: left;
            width: 50%;
            padding: 40px 65px 0 65px;
            h2 {
                color: $white;
                font-size: 37px;
                margin-bottom: 11px;
            }
            p {
                color: $white;
                font-size: 18px;
                line-height: 26px;
                margin-bottom: 18px;
            }
            input[type=phone] {
                background: $white;
                padding: 8px;
                font-size: 15px;
                width: 100%;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
            }
            input[type=email] {
                background: $white;
                padding: 8px;
                font-size: 15px;
                width: 100%;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
            input[type=name] {
                background: $white;
                padding: 8px;
                width: 100%;
                font-size: 15px;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
            input[type=Company] {
                background: $white;
                padding: 8px;
                font-size: 15px;
                width: 100%;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
            input[type=Country] {
                background: $white;
                padding: 8px;
                width: 100%;
                font-size: 15px;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
            input[type=text] {
                background: $white;
                padding: 8px;
                font-size: 15px;
                width: 100%;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
            textarea {
                resize: none;
                color: $black;
                font-size: 15px;
                width: 100%;
                background: $white;
                padding: 10px;
                outline: none;
                height: 120px;
                border: none;
                margin-bottom: 17px;
            }
            .button {
                font-size: 14px;
                color: $white;
                font-family: 'Helvetica-Bold';
                text-transform: uppercase;
                background: $black;
                padding: 0 30px 0 30px;
                line-height: 42px;
                display: inline-block;
                text-decoration: none;
                &:hover {
                    background: $white;
                    color: $black;
                }
            }
            #myselect {
                background: $white;
                padding: 8px;
                font-size: 15px;
                width: 100%;
                height: auto !important;
                display: inline-block;
                color: $black;
                line-height: 23px;
                margin-bottom: 17px;
                border: none;
            }
        }
        img {
            float: right;
            vertical-align: top;
        }

    }
}

